<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fenghun.openglesdroid.MainActivity" >

    
	<FrameLayout 
	    android:id="@+id/surfaceViewFL"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_alignParentTop="true">
	</FrameLayout>
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
	<Button 
	    android:id="@+id/isVRBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="单"
	    android:layout_alignParentRight="true"
	    android:onClick="isVR"/>
	
	<LinearLayout		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:visibility="gone">
		<Button
			android:id="@+id/button_set_min_filter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"					
			android:text="set_min_filter" 
			android:onClick="setMinFilter"/>
		<Button
			android:id="@+id/button_set_mag_filter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"					
			android:text="set_mag_filter" 
			android:onClick="setMagFilter"/>	
	</LinearLayout>
	
	<LinearLayout		
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:visibility="gone">
		<Button
			android:id="@+id/button_decrease_num_cubes"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_decrease_cube_count" 
			android:onClick="decreaseNumCubes"/>	
		<Button
			android:id="@+id/button_increase_num_cubes"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_increase_cube_count" 
			android:onClick="increaseNumCubes"/>
		<Button
			android:id="@+id/button_switch_VBOs"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_using_VBOs"
			android:onClick="switchVBOs" />
		<Button
			android:id="@+id/button_switch_stride"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/lesson_seven_using_stride"
			android:onClick="switchStride" />				
	</LinearLayout>
</RelativeLayout>
